# GameInfo

./: .gitignore  .readthedocs.yml  GameInfo.desktop  GameInfo.py  GameInfo.xml  LICENSE  PKGBUILD  README.md  TODO  TODO.md  __main__.py  compatibilitytools.d  install.sh  libraryfolders-test.vdf  libraryfolders.vdf  localconfig.vdf  org.amstelchen.gameinfo.policy  pre-TODO.md  pyproject.toml  pyproject.toml.no_psutil  requirements.txt  timings.ods
.github/workflows/: python-package-no-pytest.yml
docs/: conf.py  index.rst
gameinfo/: AppDebug.py  Desktop.py  Doom.py  Dune.py  Fallout.py  Functions.py  GameInfo.py  GameInfo.xml  PBar.py  PrintInfo.py  SteamLogs.py  Version.py  __init__.py  __main__.py
gameinfo/locales/: LINGUAS  gameinfo.pot  translate.py
gameinfo/locales/de/LC_MESSAGES/: gameinfo.mo  gameinfo.po
gameinfo/locales/en/LC_MESSAGES/: gameinfo.po
gameinfo/locales/es/LC_MESSAGES/: gameinfo.mo  gameinfo.po
gameinfo/locales/fr/LC_MESSAGES/: gameinfo.mo  gameinfo.po
gameinfo/locales/hr/LC_MESSAGES/: gameinfo.mo  gameinfo.po
gameinfo/locales/nl/LC_MESSAGES/: gameinfo.mo  gameinfo.po
gameinfo/locales/pt_BR/LC_MESSAGES/: gameinfo.mo  gameinfo.po
gameinfo/locales/ru/LC_MESSAGES/: gameinfo.mo  gameinfo.po
gameinfo/locales/tr/LC_MESSAGES/: gameinfo.mo  gameinfo.po
gameinfo/locales/zh_CN/LC_MESSAGES/: gameinfo.mo  gameinfo.po
locales/de/LC_MESSAGES/: gameinfo.po
python-apt/: python_apt-0.7.8-cp310-cp310-linux_x86_64.whl
src/: AppDebug.py  GameInfo.py  GameInfo.xml
